# monorepo

./: .gitignore  README.md  foo.html  nx.json  ny.html  package-lock.json  package.json  pyproject.toml
.circleci/: backend-config.yml  config.yml  continue-config.yml
apps/: server.mjs
data/: nytimes2025.json
data-backend/: .dockerignore  .env.example  .env.production.template  .gitignore  CHAT_INTEGRATION_COMPLETE.md  CIRCLECI_SETUP.md  DEPLOYMENT.md  DEPLOY_TO_SERVER.md  Dockerfile  Dockerfile.vector  FRONTEND_TEST_RESULTS.md  GOOGLE_OAUTH_FIX.md  IMPORT_COMPLETE_SUMMARY.md  IMPORT_REPORTING.md  IMPORT_UI_EXAMPLE.md  INTEGRATION_TESTS.md  INTEGRATION_TEST_SUMMARY.md  MULTI_USER_COMPLETE.md  NEO4J_CONVERSION.md  PRODUCTION_DEPLOYMENT.md  QUICK_TEST_GUIDE.md  README.md  STAGING_ENVIRONMENT.md  SYSTEM_CONTEXT.md  TESTING_QUICK_REFERENCE.md  TEST_FIXES_SUMMARY.md  TEST_RESULTS.md  TEST_SUITE_README.md  TEST_SUITE_SUMMARY.md  analyze_skip_log.py  check_base_entities.py  clear_user_data.py  convert_neo4j_test.py  debug_import.py  deploy.sh  docker-compose.local.yml  docker-compose.yml  requirements.txt  run_integration_tests.sh  setup_google_oauth.sh  (+10 more)
docs/: Highschool Photography.html  sample.html  test.html
frontend/: AUTHENTICATION_ADDED.md  REACT_AUTH_INTEGRATION_GUIDE.md  package-lock.json  package.json
libs/: README.md
py-file-helpers/: README.md
scripts/: .coverage  BUGFIX_pattern_matching.md  BUGFIX_reprocess_existing_files.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  TESTING_GUIDE.md  apply_exif.py  apply_exif_usage.md  audit_logging_guide.md  (+33 more)
(+354 files in other folders)
