[tool.poetry]
name = "monorepo"
version = "0.1.0"
description = ""
authors = [ "Deven Kalra <deven@kalra.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^3.12"

    [tool.poetry.dependencies.py-data-helpers]
    path = "libs"
    develop = true

    [tool.poetry.dependencies.py-file-helpers]
    path = "py-file-helpers"
    develop = true

    [tool.poetry.dependencies.py-string-helpers]
    path = "libs"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"
autopep8 = "2.3.1"
pytest = "8.3.4"
pytest-sugar = "1.0.0"
pytest-cov = "6.0.0"
pytest-html = "4.1.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
